--- a/androidtask/src/main/res/layout/activity_main.xml
+++ b/androidtask/src/main/res/layout/activity_main.xml
@@ -8,13 +8,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hexcuse.first_code.MainActivity">
+    tools:context="com.hexcuse.androidtask.MainActivity">
 
-    <Button
-        android:id="@+id/btn"
-        android:layout_centerHorizontal="true"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="FirstClick"
         android:text="Hello World!"/>
 </RelativeLayout>
